Add the core functionalities and credits

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@clerk/nextjs": "^6.23.0",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
+    "@stripe/stripe-js": "^7.4.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
     "mongodb": "^6.17.0",
@@ -29,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "sonner": "^2.0.5",
+    "stripe": "^18.2.1",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
