--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "konva": "^9.3.20",
     "lucide-react": "^0.522.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
@@ -31,6 +32,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-konva": "^19.0.6",
+    "recharts": "^3.0.2",
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
     "svix": "^1.67.0",
@@ -53,5 +56,8 @@
     "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-js": "^19.0.0-rc-69d4b800-20241021"
   }
 }
